[package]
name = "p3-brakedown"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-code = { path = "../code" }
p3-field = { path = "../../Plonky3/field" }
p3-lde = { path = "../../Plonky3/lde" }
p3-matrix = { path = "../../Plonky3/matrix" }
p3-mersenne-31 = { path = "../../Plonky3/mersenne-31" }
p3-reed-solomon = { path = "../reed-solomon" }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "encode"
harness = false
